--- a/templates/QuestionShow.html
+++ b/templates/QuestionShow.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Question Show</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
 </head>
+
 <body>
     <div class="container">
         <h1>Q{{qtn_order}} {{qtn}}</h1>
@@ -30,30 +32,30 @@
     </div>
     <script>
         var socket = io.connect('http://' + document.domain + ':' + location.port);
-        var timerInterval;
-            /*
-        // 监听计时器更新事件
-        socket.on('timer_update', function(data) {
-            document.getElementById('timer').textContent = data.time_remaining;
-        });
+        var urlParams = new URLSearchParams(window.location.search);
+        var room_id = urlParams.get('room_id');
 
-        // 监听计时结束事件
-        socket.on('timer_end', function() {
-            document.getElementById('timer').textContent = 'Time is up!';
-            clearInterval(timerInterval);
-            document.getElementById('answer-button').disabled = true;
-        });
-            */
-        // 发送加入房间事件
-        socket.emit('join_room', { room_id: '{{ room_id }}' });
 
-        
-        document.addEventListener('DOMContentLoaded', function () {
-            // alert("Timer Start!");
-            startTimer();
-        });
 
-        
+        function RefreshTimer() {
+            //将room_id传到后端，再在后端计算剩余秒数传回
+            socket.emit("getSecondsLeft", { "room_id": room_id }, function (left_seconds) {
+                document.getElementById('timer').textContent = left_seconds;
+            });
+
+        }
+        //一打开问题后端就记录时间
+        socket.emit("newQuestion", room_id);
+
+        // 每隔一段时间调用函数，单位为ms
+        var interval = setInterval(RefreshTimer, 100);
+        // 当页面离开时，停止定时请求
+        window.onbeforeunload = function () {
+            clearInterval(interval);
+        };
+
+
     </script>
 </body>
+
 </html>
