--- a/templates/QuestionShow.html
+++ b/templates/QuestionShow.html
@@ -35,26 +35,24 @@
         var urlParams = new URLSearchParams(window.location.search);
         var room_id = urlParams.get('room_id');
 
-
-
         function RefreshTimer() {
             //将room_id传到后端，再在后端计算剩余秒数传回
             socket.emit("getSecondsLeft", { "room_id": room_id }, function (left_seconds) {
                 document.getElementById('timer').textContent = left_seconds;
+                //秒数为0时跳转到SimpleRank.html
+                if (left_seconds <= 0) {
+                    clearInterval(interval);
+                    window.location.href = 'Rank.html?room_id=' + room_id;
+                }
             });
-
         }
+
         //一打开问题后端就记录时间
         socket.emit("newQuestion", room_id);
 
         // 每隔一段时间调用函数，单位为ms
         var interval = setInterval(RefreshTimer, 100);
-        // 当页面离开时，停止定时请求
-        window.onbeforeunload = function () {
-            clearInterval(interval);
-        };
-
-
+       
     </script>
 </body>
 
