--- a/templates/SimpleRank.html
+++ b/templates/SimpleRank.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Simple Rank</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
-</head>
-<body>
-    <h1>Question {{ question_number }} Result</h1>
-    <p>Player 1: {{ player1_score }}</p>
-    <p>Player 2: {{ player2_score }}</p>
-    <p>Player 3: {{ player3_score }}</p>
-    <!-- Add more players as needed -->
-
-    <button id="next-button" class="button" onclick="toNextQuestion()">NEXT</button>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script>
         var socket = io.connect('http://' + document.domain + ':' + location.port);
-        // 发送加入房间事件
-        // socket.emit('join_room', { room_id: '{{ room_id }}' });
+        var urlParams = new URLSearchParams(window.location.search);
+        var room_id = urlParams.get('room_id');
+        function toNextQuestion() {
+            window.location.href = 'QuestionShow.html?room_id=' + room_id;
+        }
+    </script>
+</head>
+
+<body>
+    <h1>Q{{ question_number }} Result</h1>
+    <p>No.1&emsp;&emsp;<span id="simplerank_player1_name"></span>&emsp;&emsp;<span id="simplerank_player1_score"></span></p>
+    <p>No.2&emsp;&emsp;<span id="simplerank_player2_name"></span>&emsp;&emsp;<span id="simplerank_player2_score"></span></p>
+    <p>No.3&emsp;&emsp;<span id="simplerank_player3_name"></span>&emsp;&emsp;<span id="simplerank_player3_score"></span></p>
+    <!-- Add more players as needed -->
+    <button id="next-button" class="button" onclick="toNextQuestion()">NEXT</button>
+    <script>
+        function RefreshRank() {
+            socket.emit("checkRankPlayers", room_id, function (res) {
+                $("#simplerank_player1_name").text(res["p1_name"]);
+                $("#simplerank_player1_score").text(res["p1_score"]);
+                $("#simplerank_player2_name").text(res["p2_name"]);
+                $("#simplerank_player2_score").text(res["p2_score"]);
+                $("#simplerank_player3_name").text(res["p3_name"]);
+                $("#simplerank_player3_score").text(res["p3_score"]);
+            });
+        }
+        RefreshRank();
     </script>
 </body>
+
 </html>
