--- a/templates/AnswerShow.html
+++ b/templates/AnswerShow.html
@@ -5,22 +5,23 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Q{{qtn_order}} {{qtn}}</h1>
         <h3>Timer: <span id="timer">15</span> seconds</h3>
         <div class="answer-option">
-            <button id="option-A" class="option-letter">A</button>
+            <button id="option-A" class="option-letter" onclick="pressedAnswerButton()">A</button>
         </div>
         <div class="answer-option">
-            <button id="option-B" class="option-letter">B</button>
+            <button id="option-B" class="option-letter" onclick="pressedAnswerButton()">B</button>
         </div>
         <div class="answer-option">
-            <button id="option-C" class="option-letter">Γ</button>
+            <button id="option-C" class="option-letter" onclick="pressedAnswerButton()">Γ</button>
         </div>
         <div class="answer-option">
-            <button id="option-D"class="option-letter">Δ</button>
+            <button id="option-D" class="option-letter" onclick="pressedAnswerButton()">Δ</button>
         </div>
     </div>
     <script>
@@ -31,17 +32,22 @@
         function RefreshTimer() {
             //将room_id传到后端，再在后端计算剩余秒数传回
             socket.emit("getSecondsLeft", { "room_id": room_id }, function (left_seconds) {
-                document.getElementById('timer').textContent = left_seconds;
-                //秒数为0时跳转到SimpleRank.html
+                $("#timer").text(left_seconds);
+                //秒数为0时跳转到SimpleScoreShow.html
                 if (left_seconds <= 0) {
                     clearInterval(interval);
-                    window.location.href = 'Rank.html?room_id=' + room_id;
+                    window.location.href = 'ScoreShow.html?room_id=' + room_id;
                 }
             });
         }
-        
-        //一打开问题后端就记录时间
-        socket.emit("newQuestion", room_id);
+
+        function pressedAnswerButton(){
+            button_id=event.target.id;
+            chosen_answer=button_id.slice(7,8);
+            socket.emit("checkAnswerIfCorrect",{"room_id":room_id,"chosen_answer":chosen_answer},function(real_answer){
+                $(".answer-option").css({"display":"none"})
+            });
+        }
 
         // 每隔一段时间调用函数，单位为ms
         var interval = setInterval(RefreshTimer, 100);
