--- a/templates/SimpleRank.html
+++ b/templates/SimpleRank.html
@@ -11,13 +11,14 @@
         var urlParams = new URLSearchParams(window.location.search);
         var room_id = urlParams.get('room_id');
         function toNextQuestion() {
+            socket.emit("toNextQuestion",room_id);
             window.location.href = 'QuestionShow.html?room_id=' + room_id;
         }
     </script>
 </head>
 
 <body>
-    <h1>Q{{ question_number }} Result</h1>
+    <h1>Q{{ qtn_order }} Result</h1>
     <p>No.1&emsp;&emsp;<span id="simplerank_player1_name"></span>&emsp;&emsp;<span id="simplerank_player1_score"></span></p>
     <p>No.2&emsp;&emsp;<span id="simplerank_player2_name"></span>&emsp;&emsp;<span id="simplerank_player2_score"></span></p>
     <p>No.3&emsp;&emsp;<span id="simplerank_player3_name"></span>&emsp;&emsp;<span id="simplerank_player3_score"></span></p>
