--- a/templates/PreAnswer.html
+++ b/templates/PreAnswer.html
@@ -21,7 +21,7 @@
                 console.log(room_status);
                 if (room_status === 0) {
                     // 如果房间状态为0，跳转到AnswerShow页面
-                    window.location.href = '/AnswerShow.html?room_id=' + room_id;
+                    window.location.href = '/AnswerShow?room_id=' + room_id;
                 }
             });
 
