--- a/templates/Prestart.html
+++ b/templates/Prestart.html
@@ -16,7 +16,7 @@
         function toQuestionShow() {
             var urlParams = new URLSearchParams(window.location.search);
             var r = urlParams.get('room_id');
-            window.location.href = 'QuestionShow.html?room_id=' + r;
+            window.location.href = 'QuestionShow?room_id=' + r;
         }
 
     </script>
