--- a/templates/RoomCreate.html
+++ b/templates/RoomCreate.html
@@ -42,7 +42,7 @@
                 // 待优化
                 if (res["sucess"]) {
                     // 文件格式正确，跳转到该房间号的页面
-                    window.location.href = 'Prestart.html?room_id=' + room_id;
+                    window.location.href = 'Prestart?room_id=' + room_id;
                 } else {
                     // 文件格式错误，显示错误信息
                     nextButton.classList.add('disabled');
