--- a/templates/SimpleScoreShow.html
+++ b/templates/SimpleScoreShow.html
@@ -21,7 +21,7 @@
     <script>
         socket.on("toNextQuestion_res",()=>{
             //alert("recieved toNextQuestion");
-            window.location.href = '/AnswerShow.html?room_id=' + room_id;
+            window.location.href = '/AnswerShow?room_id=' + room_id;
         })
         //var interval = setInterval(checkRoomStatus, 500);
     </script>
