--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>SimpleQA</h1>
-    <a class="button" href="RoomCreate.html">Q</a>
-    <a class="button" href="RoomJoin.html">A</a>
+    <a class="button" href="RoomCreate">Q</a>
+    <a class="button" href="RoomJoin">A</a>
     <p class="ip">ip:{{user_ip}}</p>
 </body>
 </html>
