--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #add8e6;
+    /*background-color: #add8e6;*/
+    background-color: #00a470;
     text-align: center;
     margin-top: 150px;
 }
