--- a/templates/Ingame/AnswerShow.html
+++ b/templates/Ingame/AnswerShow.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Q{{qtn_order}} {{qtn}}</h1>
+        <h1>{{showncode}} {{qtn}}</h1>
         <h3>Timer: <span id="timer">15</span> seconds</h3>
         <div class="answer-option">
             <button id="option-A" class="option-letter" onclick="pressedAnswerButton()">A</button>
