--- a/templates/Ingame/AnswerShow_MMC.html
+++ b/templates/Ingame/AnswerShow_MMC.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1>Q{{qtn_order}} {{qtn}}</h1>
+        <h1>{{showncode}} {{qtn}}</h1>
         <h3>Timer: <span id="timer">15</span> seconds</h3>
         <div id="answer-list" class="answer-list">
             
