--- a/templates/Ingame/QuestionShow_SMC.html
+++ b/templates/Ingame/QuestionShow_SMC.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <h1>Q{{qtn_order}} {{qtn}}</h1>
+        <h1>{{showncode}} {{qtn}}</h1>
         <p class="small-text">Single Select</p>
         <h3>Timer: <span id="timer">15</span> seconds</h3>
         <div class="answer-option">
